--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="col"></div>
             </div>
         </div>
-        <nav class="navbar navbar-expand-sm sticky-top text-back navbar-dark bg-transparent">
+        <nav class="navbar navbar-expand-sm fixed-top text-back navbar-dark bg-transparent">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="assets/img/logo-tp.png" alt="logo" width="100px" height="80px" class="d-inline-block align-top" loading="lazy">
