--- a/about.html
+++ b/about.html
@@ -11,12 +11,8 @@
         <script src="https://kit.fontawesome.com/c7aacba508.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <div class="container">
-            <div class="row">
-                <div class="col"></div>
-            </div>
-        </div>
-        <nav class="navbar navbar-expand-sm navbar-light bg-white fixed-top">
+        
+        <nav class="navbar navbar-expand-sm navbar-light bg-white sticky-top">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="assets/img/logo-tp2.png" alt="logo" width="100px" height="50px" class="d-inline-block align-top" loading="lazy">
@@ -69,41 +65,6 @@
                 </div>
                 <div class="col-lg-8 col-sm-12">
                     <img src="assets/img/Happy.jpg" class="" height="600px" width="100%" alt="Responsive image">
-                </div>
-            </div>
-        </div>
-        <div class="container-fluid">
-            <div class="container">
-                <div class="row">
-                    <div class="col text-center mt-5">
-                        <p class="title-me h2">Categories Sell</p>
-                    </div>
-                </div>
-                <div class="card-deck">
-                        <div class="card h-100  border-light" style="width-max: 20rem;">
-                            <img src="assets/img/produk2.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title text-center bg-bluesky w-100">Protect Yourself</h5>
-                            <p class="card-text">You don't worry if you go alone because Lindir can protect yourself from criminal, One time police help you from danger situation</p>
-                            <p class="card-text">Lindir always protect you and always beside you. You just push one button and we will protect you.</p>
-                        </div>
-                    </div>
-                    <div class="card h-100 border-light" style="width-max: 20rem;">
-                        <img src="assets/img/produk1.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title text-center bg-bluesky w-100">Protect Yourhome</h5>
-                            <p class="card-text">You don't worry if you leave home because Lindir can protect yourhome from criminal and send ther report for your device, One time police go to your home and caught the thief. So your home clear from steal</p>
-                            <p class="card-text">You don't worry if you go alone because Lindir can protect yourself from criminal, One time police help you from danger situation</p>
-                        </div>
-                    </div>
-                    <div class="card h-100 border-light" style="width-max: 20rem;">
-                        <img src="assets/img/produk3.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title text-center bg-bluesky w-100">Smart Home</h5>
-                            <p class="card-text">Lindir can make your family everyday feel happy. Lindir make you home be smarthome. AI support to be autonomus home. Make the happy stories</p>
-                            <p class="card-text">We have more device support by google and amazon. All device from your home can your configure from your smarthpone. Always easy to configure</p>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
