--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="col"></div>
             </div>
         </div>
-        <nav class="navbar navbar-expand-sm fixed-top text-back navbar-dark bg-transparent">
+        <nav class="navbar navbar-expand-sm fixed-top text-back navbar-dark bg-transparent shadow">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="assets/img/logo-tp.png" alt="logo" width="100px" height="80px" class="d-inline-block align-top" loading="lazy">
@@ -43,6 +43,9 @@
                         </li>
                         <li class="nav-item mx-2">
                             <a class="nav-link js-scroll-trigger text-white" href="#">Features</a>
+                        </li>
+                        <li class="nav-item mx-2">
+                            <a class="nav-link js-scroll-trigger text-white" href="#scroll">Categories</a>
                         </li>
                         <li class="nav-item mx-2">
                             <a class="nav-link js-scroll-trigger text-white" href="#">Pricing</a>
@@ -97,6 +100,60 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
+        <div class="container-fluid">
+            <div class="container">
+                <div class="row">
+                    <div class="col text-center mt-5">
+                        <p class="title-me h2">Features</p>
+                    </div>
+                </div>
+                <div class="row mb-5">
+                    <div class="col-lg-4 col-sm-6 border">
+                        <h1>Goself</h1>
+                    </div>
+                    <div class="col-lg-8 col-sm-6">
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/i2jFN_QEcS4?controls=0&loop=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>  
+            </div>
+        </div>
+        <div class="container-fluid" id="scroll">
+            <div class="container">
+                <div class="row">
+                    <div class="col text-center mt-5">
+                        <p class="title-me h2">Categories Sell</p>
+                    </div>
+                </div>
+                <div class="card-deck">
+                        <div class="card h-100  border-light" style="width-max: 20rem;">
+                            <img src="assets/img/produk2.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title text-center bg-bluesky w-100">Protect Yourself</h5>
+                            <p class="card-text">You don't worry if you go alone because Lindir can protect yourself from criminal, One time police help you from danger situation</p>
+                            <p class="card-text">Lindir always protect you and always beside you. You just push one button and we will protect you.</p>
+                        </div>
+                    </div>
+                    <div class="card h-100 border-light" style="width-max: 20rem;">
+                        <img src="assets/img/produk1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title text-center bg-bluesky w-100">Protect Yourhome</h5>
+                            <p class="card-text">You don't worry if you leave home because Lindir can protect yourhome from criminal and send ther report for your device, One time police go to your home and caught the thief. So your home clear from steal</p>
+                            <p class="card-text">You don't worry if you go alone because Lindir can protect yourself from criminal, One time police help you from danger situation</p>
+                        </div>
+                    </div>
+                    <div class="card h-100 border-light" style="width-max: 20rem;">
+                        <img src="assets/img/produk3.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title text-center bg-bluesky w-100">Smart Home</h5>
+                            <p class="card-text">Lindir can make your family everyday feel happy. Lindir make you home be smarthome. AI support to be autonomus home. Make the happy stories</p>
+                            <p class="card-text">We have more device support by google and amazon. All device from your home can your configure from your smarthpone. Always easy to configure</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="container-fluid bg-lightblue w-100"> 
             <div class="container">
                 <div class="row">
@@ -120,6 +177,41 @@
                         </div>
                         <div class="pb-2">
                             <img src="assets/img/member2.png" class="partenrship rounded-pill" alt="...">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="container">
+                <div class="row">
+                    <div class="col text-center mt-5">
+                        <p class="title-me h2">Categories Sell</p>
+                    </div>
+                </div>
+                <div class="card-deck">
+                        <div class="card h-100  border-light" style="width-max: 20rem;">
+                            <img src="assets/img/produk2.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title text-center bg-bluesky w-100">Protect Yourself</h5>
+                            <p class="card-text">You don't worry if you go alone because Lindir can protect yourself from criminal, One time police help you from danger situation</p>
+                            <p class="card-text">Lindir always protect you and always beside you. You just push one button and we will protect you.</p>
+                        </div>
+                    </div>
+                    <div class="card h-100 border-light" style="width-max: 20rem;">
+                        <img src="assets/img/produk1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title text-center bg-bluesky w-100">Protect Yourhome</h5>
+                            <p class="card-text">You don't worry if you leave home because Lindir can protect yourhome from criminal and send ther report for your device, One time police go to your home and caught the thief. So your home clear from steal</p>
+                            <p class="card-text">You don't worry if you go alone because Lindir can protect yourself from criminal, One time police help you from danger situation</p>
+                        </div>
+                    </div>
+                    <div class="card h-100 border-light" style="width-max: 20rem;">
+                        <img src="assets/img/produk3.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title text-center bg-bluesky w-100">Smart Home</h5>
+                            <p class="card-text">Lindir can make your family everyday feel happy. Lindir make you home be smarthome. AI support to be autonomus home. Make the happy stories</p>
+                            <p class="card-text">We have more device support by google and amazon. All device from your home can your configure from your smarthpone. Always easy to configure</p>
                         </div>
                     </div>
                 </div>
