--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         
-        <nav class="navbar navbar-expand-sm navbar-light bg-white sticky-top">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top shadow">
             <div class="container">
                 <a class="navbar-brand" href="#">
                     <img src="assets/img/logo-tp2.png" alt="logo" width="100px" height="50px" class="d-inline-block align-top" loading="lazy">
@@ -21,54 +21,59 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
-                            <form class="form-inline mr-5 ">
-                                <div class="input-group ">
-                                    <input class="form-control mr-sm-0 fas fa-search text-black-50 rounded-pill"  type="search" placeholder="Search" aria-label="Search">
-                                    <div class="input-group-append">
-                                        <button class="btn btn-outline-light  my-1 my-sm-0" type="submit">
+                    <ul class="navbar-nav mx-auto">
+                        <li class="nav-item mx-2">
+                            <form class="form-inline">
+                                <input class="form-control search mr-sm-2 rounded-pill"  type="search" placeholder="Search" aria-label="Search">
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <button class="btn my-sm-0 rounded-circle" type="submit">
                                             <i class="fas fa-search text-black-50"></i>
                                         </button>
                                     </div>
                                 </div>
-                            </form> 
+                            </form>
                         </li>
-                        <li class="nav-item mx-2">
-                            <a class="nav-link js-scroll-trigger" href="index.html">Home <span class="sr-only">(current)</span></a>
+                        <li class="nav-item mx-2 active">
+                            <a class="nav-link link js-scroll-trigger text-primary active" href="index2.html">Home </a>
                         </li>
-                        <li class="nav-item mx-2">
-                            <a class="nav-link js-scroll-trigger" href="#">Features</a>
+                        <li class="nav-item">
+                            <a class="nav-link link mx-2 js-scroll-trigger text-primary" href="#">Features</a>
                         </li>
-                        <li class="nav-item mx-2">
-                            <a class="nav-link js-scroll-trigger" href="#">Pricing</a>
+                        <li class="nav-item">
+                            <a class="nav-link link mx-2 text-primary" href="#scroll">Categories</a>
                         </li>
-                        <li class="nav-item active mx-2">
-                            <a class="nav-link js-scroll-trigger" href="#">News</a>
+                        <li class="nav-item">
+                            <a class="nav-link link mx-2 js-scroll-trigger text-primary" href="#">Pricing</a>
                         </li>
-                        <a class="nav-link js-scroll-trigger btn btn-primary ml-4" href="#">LOGIN</a>
+                        <li class="nav-item">
+                            <a class="nav-link link mx-2 js-scroll-trigger text-primary" href="#">News</a>
+                        </li>
+                        <li class="nav-item nav-btn">
+                            <a class="nav-link  mx-2 btn  btn-primary text-white tombol px-3" href="#">LOGIN</a>
+                        </li>
                     </ul>
                 </div>
             </div>
         </nav>
         <div class="jumbotron jumbotron-fluid">
-            <div class="container">
-                <h1 class="display-3">Lets Join Us</h1>
+            <div class="container text-center">
+                <h1 class="">Lets Join Us</h1>
                 <a href="#" class="text-decoration-none">JOIN</a>
             </div>
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 col-sm-12 pr-5">
+                <div class="col-lg-5 col-sm-12 ">
                     <p class="title-me display-4">Make Your Family, Happines Everyday</p>
                     <p class="lead mt-5">Lindir Always Beside You, Always Protect you, Make You and Your Family Happy Everyday</p>
                 </div>
-                <div class="col-lg-8 col-sm-12">
-                    <img src="assets/img/Happy.jpg" class="" height="600px" width="100%" alt="Responsive image">
+                <div class="col-lg-7 col-sm-12">
+                    <img src="assets/img/Happy.jpg" class="img-fluid" alt="Responsive image">
                 </div>
             </div>
         </div>
-        <div class="container-fluid bg-lightblue w-100"> 
+        <div class="container-fluid bg-lightblue"> 
             <div class="container">
                 <div class="row">
                     <div class="col text-center mt-5">
@@ -76,7 +81,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="d-flex flex-wrap justify-content-center align-content-around ctn-partner my-4">
+                    <div class="col d-flex flex-wrap justify-content-center align-content-around ctn-partner my-4">
                         <div class=" pb-2">
                             <img src="assets/img/member1.png" class="partenrship rounded-pill" alt="...">
                         </div>
@@ -151,7 +156,7 @@
                     <div class="col-lg-3 col-sm-12">
                         <h5>COMPANY</h5>
                         <ul class="nav flex-column mt-3">
-							<li class="mb-3"><a href="#" class="">About</a></li>
+							<li class="mb-3 active"><a href="#" class="">About</a></li>
 							<li class="mb-3"><a href="#" class="">Certification</a></li>
 							<li class="mb-3"><a href="#" class="">Partnership</a></li>
 							<li class="mb-3"><a href="#" class="k">Awards</a></li>
