--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                             </form>
                         </li>
                         <li class="nav-item mx-2 active">
-                            <a class="nav-link link js-scroll-trigger text-primary active" href="index2.html">Home </a>
+                            <a class="nav-link link js-scroll-trigger text-primary active" href="index.html">Home </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link link mx-2 js-scroll-trigger text-primary" href="#">Features</a>
