--- a/index.html
+++ b/index.html
@@ -9,53 +9,47 @@
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c7aacba508.js" crossorigin="anonymous"></script>
 </head>
-<body class="blue-gradient">
-    <div class="container fixed-bottom mb-5 text-right">
-        <a href="#" class="button-top shadow text-white"><i class="icon-top fas fa-angle-double-up"></i></a>
-    </div>
-    <nav class="navbar navbar-expand-lg sticky-top navbar-light bg-white shadow">
-        <div class="container">
-            <a class="navbar-brand" href="#">
-                <img src="assets/img/logo-tp.png" alt="logo" width="100px" height="80px" class="d-inline-block align-top" loading="lazy">
+<body class="blue-gradient" data-spy="scroll" onload="firstScript()">
+
+    <nav class="navbar navbar-expand-lg sticky-top navbar-light shadow" id="scroll-nav">
+            <a class="navbar-brand ml-md-5" href="#">
+                <img src="assets/img/logo-ico.png" alt="logo" width="100" height="50" class="d-inline-block align-top" loading="lazy">
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" id="toggle-button" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button> <!--pengatur toggle nya-->
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav mx-auto">
-                    <li class="nav-item mx-2">
-                        <form class="form-inline">
-                            <input class="form-control search mr-sm-2 rounded-pill"  type="search" placeholder="Search" aria-label="Search">
-                            <div class="input-group">
-                                <div class="input-group-prepend">
-                                    <button class="btn my-sm-0 rounded-circle" type="submit">
-                                        <i class="fas fa-search text-black-50"></i>
-                                    </button>
-                                </div>
-                            </div>
-                        </form>
-                    </li>
+                <form class="form-inline my-2 my-lg-0 ml-md-5">
+                    <input class="form-control search mr-sm-2 rounded-pill "  type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn rounded-circle my-2 my-sm-0" type="submit">
+                                <i class="fas fa-search text-black-50"></i>
+                            </button>
+                </form>
+                <ul class="navbar-nav mx-auto mt-2">
                     <li class="nav-item mx-2 active">
-                        <a class="nav-link link js-scroll-trigger text-primary active" href="#">Home </a>
+                        <a class="nav-link link  text-primary active" href="index.html">Home </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link link mx-2 js-scroll-trigger text-primary" href="#">Features</a>
+                        <a class="nav-link link  text-primary" href="#section-feature">Features</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link link mx-2 text-primary" href="#scroll">Categories</a>
+                        <a class="nav-link link  text-primary" href="#section-categories">Categories</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link link mx-2 js-scroll-trigger text-primary" href="#">Pricing</a>
+                        <a class="nav-link link  text-primary" href="#section-pricelist">Pricing</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link link mx-2 js-scroll-trigger text-primary" href="#">News</a>
+                        <a class="nav-link link  text-primary" href="#section-system">System</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link link  text-primary" href="#">News</a>
                     </li>
                     <li class="nav-item nav-btn">
-                        <a class="nav-link  mx-2 btn  btn-primary text-white tombol px-3" href="login.html">LOGIN</a>
+                        <a class="nav-link  btn  btn-primary text-white tombol px-3" href="login.html">LOGIN</a>
                     </li>
                     <li class="nav-item text-white">
-                        <a class="nav-link mx-2 js-scroll-trigger" href="#">
-                            <div class="custom-control custom-wsitch">
+                        <a class="nav-link mx-2 js-scroll-trigger">
+                            <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input" id="switchDark">
                                 <label class="custom-control-label" for="switchDark">Dark mode</label>
                             </div>
@@ -64,15 +58,19 @@
                 </ul>
                 
             </div>
-        </div>
     </nav>
-    <div class="jumbotron text-center">
-        <div class="container">
+
+    <div class="container fixed-bottom mb-5 text-right d-none" id="buttonUp">
+        <a href="#" class="button-top shadow text-white"><i class="icon-top fas fa-angle-double-up"></i></a>
+    </div>
+
+    <div class="jumbotron jumbotron-fluid text-center">
+        <div class="container" style="margin-top: 150px;">
             <h1>Lets Join Us</h1>
             <a href="#" class="text-decoration-none">JOIN</a>
         </div>
     </div>
-    <div class="container-fluid ">
+    <div class="container-fluid" id="section-feature">
         <div class="container bg-bluesky mb-5 text-white shadow-lg">
             <div class="row py-5">
                 <div class="col text-center">
@@ -129,7 +127,7 @@
             <br>
         </div>
     </div>
-    <div class="container-fluid">
+    <div class="container-fluid" id="section-categories">
         <div class="container border-danger my-5 shadow text-dark text-center">
             <div class="row bg-bluesky">
                 <div class="col py-5">
@@ -144,7 +142,7 @@
                             <h5 class="card-title text-center text-uppercase bg-bluesky w-100 py-2 rounded">Protect Yourself</h5>
                                 <p class="card-text text-left">You don't worry if you go alone because Lindir can protect yourself from criminal, One time police help you from danger situation</p>
                                 <p class="card-text text-left">Lindir always protect you and always beside you. You just push one button and we will protect you.</p>
-                                <button class="btn btn-primary mt-4 w-50 rounded-pill" type="submit">More</button>
+                                <a class="btn btn-primary mt-4 w-50 rounded-pill" href="self.html">More</a>
                         </div>
                     </div>
                 </div>
@@ -180,7 +178,7 @@
             <br>
         </div>
     </div>
-    <div class="container-fluid">
+    <div class="container-fluid" id="section-pricelist">
         <div class="container border-danger my-5 shadow text-dark text-center">
             <div class="row bg-bluesky">
                 <div class="col py-5">
@@ -237,7 +235,7 @@
             <br>
         </div>
     </div>
-    <div class="container-fluid ">
+    <div class="container-fluid " id="section-system">
         <div class="container bg-bluesky my-5 text-white shadow-lg">
             <div class="row py-5">
                 <div class="col text-center">
@@ -352,6 +350,48 @@
             </div>
         </div>
     </div>
+    <script type="text/javascript">
+        var nav = document.getElementById("scroll-nav");
+        var buttonUp = document.getElementById("buttonUp");
+        var itemNav = document.getElementsByClassName("link");
+        function firstScript(){
+            for(let i = 0; i<6; i++){
+                    itemNav[i].classList.remove("text-primary");
+                    itemNav[i].classList.add("text-white");
+                }
+        }
+        document.getElementById("toggle-button").addEventListener("click", myFunction);
+        function myFunction(){
+            if(nav.classList.add("bg-white")){
+                nav.classList.remove("bg-white");
+            }
+            else{
+                nav.classList.add("bg-white");
+            }
+        }
+        window.onscroll = function(){
+            if(window.pageYOffset >0){
+                for(let i = 0; i<6; i++){
+                    itemNav[i].classList.add("text-primary");
+                    itemNav[i].classList.remove("text-white");
+                }
+                nav.style.transition="all 1s";
+                nav.classList.add("bg-white");
+                buttonUp.classList.remove("d-none");
+            }
+            else{
+                nav.classList.remove("bg-white");
+                buttonUp.classList.add("d-none");
+                for(let i = 0; i<6; i++){
+                    itemNav[i].classList.remove("text-primary");
+                    itemNav[i].classList.add("text-white");
+                }
+                
+            }
+        }
+
+
+    </script>
     <script src="js/darkmode.min.js"></script>
     <script src="assets/js/jquery-3.5.1.slim.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
