perbaikan dikit ntah hari apa?

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <div class="carousel-item active">
                         <div class="row">
                             <div class="col-md-4 col-sm-6 shadow-sm text-center">
-                                <h1 class=" text-capitalize ">Home Smart</h1>
+                                <h1 class=" text-capitalize">Home Smart</h1>
                             </div>
                             <div class="col-md-8 col-sm-6 px-2">
                                 <div class="embed-responsive embed-responsive-16by9">
@@ -98,8 +98,8 @@
                     </div>
                     <div class="carousel-item">
                         <div class="row">
-                            <div class="col-md-4 col-sm-6 shadow-sm text-center border ">
-                                <h1 class=" text-capitalize">Elctricity Control</h1>
+                            <div class="col-md-4 col-sm-6 shadow-sm text-center ">
+                                <h1 class=" text-capitalize">Elctricity</h1>
                             </div>
                             <div class="col-md-8 col-sm-6 px-2">
                                 <div class="embed-responsive embed-responsive-16by9">
